--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "bookstore",
+  "name": "se122_4_reactrouter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
+    "@ant-design/pro-components": "^2.4.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.4.0",
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.8",
+    "js-cookies": "^1.0.4",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
+    "react-navigation": "^4.4.4",
+    "react-router": "^6.9.0",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "2.8.8"
   }
 }
