--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.4.0",
+    "ant-design": "^1.0.0",
+    "antd": "^5.6.2",
     "axios": "^1.4.0",
     "dayjs": "^1.11.8",
     "js-cookies": "^1.0.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
